# search-anything

./: .gitignore  GEMINI_EMBEDDING2_MIGRATION_SPEC.md  PLAN.md  README.md  pyproject.toml
src/search_anything/: cli.py  contract.py  embed.py  estimate_cost.py  search_app.py  store.py
src/vlmembed/: __init__.py  cli.py  contract.py  embed.py  estimate_cost.py  search_app.py  store.py
tests/: test_cli.py  test_contract.py  test_embed.py  test_estimate_cost.py  test_search_app.py  test_store.py
